Fix banner-title sizing on mobile

--- a/src/theme/stylesheets/_layout.scss
+++ b/src/theme/stylesheets/_layout.scss
@@ -118,6 +118,11 @@ main {
   right: 0;
   text-align: center;
   color: white;
+
+  @media screen and (max-width: 450px) {
+    font-size: $scale7;
+    line-height: 1;
+  }
 }
 
 .page-head {
